Adjust layouts automatically not to be overflow

--- a/src/styles/MainPlayerCombinedViewContainer.scss
+++ b/src/styles/MainPlayerCombinedViewContainer.scss
@@ -158,7 +158,7 @@ $zIndex: (
 .video-controls-wrapper {
   // width: 100%;
   // @extend .__player-element-wrapper-base;
-  position: absolute;
+  // position: absolute;
   transition: bottom transform 1s ease-in-out;
 
   .active {
