--- a/src/styles/VideoToolbar.scss
+++ b/src/styles/VideoToolbar.scss
@@ -1,11 +1,12 @@
-.bg-toolbar-active {
-  background: #7f1d1d;
-}
-
-.bg-toolbar-standby {
-  background: #172554;
-}
-
-.bg-toolbar-unactive {
+.bg-toolbar {
+  transition: all 0.2s ease-out;
   background: black;
+
+  &.active {
+    background: #7f1d1d;
+  }
+
+  &.standby {
+    background: #172554;
+  }
 }
